// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/alert/demo/banner.md correctly 1`] = `
<div>
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Warning text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <br />
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Very long warning text warning text text text text text text text
    </span>
    <span
      class="wmstool-alert-description"
    />
    <a
      class="wmstool-alert-close-icon"
    >
      <i
        class="anticon anticon-cross"
      />
    </a>
  </div>
  <br />
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-no-icon wmstool-alert-banner"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Warning text without icon
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <br />
  <div
    class="wmstool-alert wmstool-alert-error wmstool-alert-banner"
    data-show="true"
  >
    <i
      class="anticon anticon-cross-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Error text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
</div>
`;

exports[`renders ./components/alert/demo/basic.md correctly 1`] = `
<div
  class="wmstool-alert wmstool-alert-success wmstool-alert-no-icon"
  data-show="true"
>
  <span
    class="wmstool-alert-message"
  >
    Success Text
  </span>
  <span
    class="wmstool-alert-description"
  />
</div>
`;

exports[`renders ./components/alert/demo/closable.md correctly 1`] = `
<div>
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Warning Text Warning Text Warning TextW arning Text Warning Text Warning TextWarning Text
    </span>
    <span
      class="wmstool-alert-description"
    />
    <a
      class="wmstool-alert-close-icon"
    >
      <i
        class="anticon anticon-cross"
      />
    </a>
  </div>
  <div
    class="wmstool-alert wmstool-alert-error wmstool-alert-with-description wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Error Text
    </span>
    <span
      class="wmstool-alert-description"
    >
      Error Description Error Description Error Description Error Description Error Description Error Description
    </span>
    <a
      class="wmstool-alert-close-icon"
    >
      <i
        class="anticon anticon-cross"
      />
    </a>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/close-text.md correctly 1`] = `
<div
  class="wmstool-alert wmstool-alert-info wmstool-alert-no-icon"
  data-show="true"
>
  <span
    class="wmstool-alert-message"
  >
    Info Text
  </span>
  <span
    class="wmstool-alert-description"
  />
  <a
    class="wmstool-alert-close-icon"
  >
    Close Now
  </a>
</div>
`;

exports[`renders ./components/alert/demo/description.md correctly 1`] = `
<div>
  <div
    class="wmstool-alert wmstool-alert-success wmstool-alert-with-description wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Success Text
    </span>
    <span
      class="wmstool-alert-description"
    >
      Success Description Success Description Success Description
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-info wmstool-alert-with-description wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Info Text
    </span>
    <span
      class="wmstool-alert-description"
    >
      Info Description Info Description Info Description Info Description
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-with-description wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Warning Text
    </span>
    <span
      class="wmstool-alert-description"
    >
      Warning Description Warning Description Warning Description Warning Description
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-error wmstool-alert-with-description wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Error Text
    </span>
    <span
      class="wmstool-alert-description"
    >
      Error Description Error Description Error Description Error Description
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/icon.md correctly 1`] = `
<div>
  <div
    class="wmstool-alert wmstool-alert-success"
    data-show="true"
  >
    <i
      class="anticon anticon-check-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Success Tips
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-info"
    data-show="true"
  >
    <i
      class="anticon anticon-info-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-warning"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Warning
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-error"
    data-show="true"
  >
    <i
      class="anticon anticon-cross-circle wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Error
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-success wmstool-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-check-circle-o wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      success tips
    </span>
    <span
      class="wmstool-alert-description"
    >
      Detailed description and advices about successful copywriting.
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-info wmstool-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-info-circle-o wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Informational Notes
    </span>
    <span
      class="wmstool-alert-description"
    >
      Additional description and informations about copywriting.
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-exclamation-circle-o wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Warning
    </span>
    <span
      class="wmstool-alert-description"
    >
      This is a warning notice about copywriting.
    </span>
  </div>
  <div
    class="wmstool-alert wmstool-alert-error wmstool-alert-with-description"
    data-show="true"
  >
    <i
      class="anticon anticon-cross-circle-o wmstool-alert-icon"
    />
    <span
      class="wmstool-alert-message"
    >
      Error
    </span>
    <span
      class="wmstool-alert-description"
    >
      This is an error message about copywriting.
    </span>
  </div>
</div>
`;

exports[`renders ./components/alert/demo/style.md correctly 1`] = `
<div>
  <div
    class="wmstool-alert wmstool-alert-success wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Success Text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-info wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Info Text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-warning wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Warning Text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-alert wmstool-alert-error wmstool-alert-no-icon"
    data-show="true"
  >
    <span
      class="wmstool-alert-message"
    >
      Error Text
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
</div>
`;
